# advent-of-code

./: Cargo.toml  README.md
input/tests/: tests.yaml
input/tests/2019/: input1.txt
src/: bitpush.rs  day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  gridrange.rs  main.rs
src/aoc2019/: day01.rs  mod.rs
src/aoc2020/: day01.rs  day1.rs  day18.rs  mod.rs
src/aoc2021/: day01.rs  day02.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day3.rs  day4.rs  mod.rs
src/aoc2022/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  mod.rs
src/aoc2023/: day01.rs  day02.rs  mod.rs
src/tests/: integration2021.rs  mod.rs
